--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,17 +14,22 @@
         android:theme="@style/Theme.LionSchool"
         tools:targetApi="31">
         <activity
+            android:name=".StudentResultsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_student_results"
+            android:theme="@style/Theme.LionSchool" />
+        <activity
             android:name=".StudentsActivity"
             android:exported="false"
             android:label="@string/title_activity_students"
             android:theme="@style/Theme.LionSchool" />
         <activity
-            android:name=".MainActivity"
+            android:name=".CourseActivity"
             android:exported="false"
             android:label="@string/title_activity_course"
             android:theme="@style/Theme.LionSchool" />
         <activity
-            android:name=".CourseActivity"
+            android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.LionSchool">
